# youtube_knowledge

./: .gitignore  DEPLOY.md  README.md  RUST_YOUTUBE_TRANSCRIPT_AGENT_PROMPT.md  docker-compose.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: app_state.rs  config.rs  main.rs
backend/src/errors/: app_error.rs  mod.rs
backend/src/models/: analysis.rs  api.rs  job.rs  mod.rs  playlist.rs  transcript.rs
backend/src/routes/: analyses.rs  downloads.rs  health.rs  jobs.rs  mod.rs  playlists.rs  probe.rs
backend/src/services/: analyzer.rs  cleanup.rs  mod.rs  transcript.rs  youtube_url.rs  ytdlp.rs
backend/src/utils/: files.rs  mod.rs  slug.rs  time.rs
frontend/: .env.example  .vercelignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: client.ts  playlists.ts  transcripts.ts
frontend/src/components/: AnalyzerPanel.tsx  CaptionSelector.tsx  DownloadButton.tsx  ErrorMessage.tsx  FormatSelector.tsx  HistoryPanel.tsx  JobStatus.tsx  MarkdownPreview.tsx  NavBar.tsx  ThemeToggle.tsx  Toast.tsx  TranscriptPreview.tsx  UrlInput.tsx
frontend/src/pages/: PlaylistPage.tsx  SinglePage.tsx
frontend/src/types/: api.ts
frontend/src/utils/: history.ts  markdown.ts  slug.ts  url.ts  validators.ts
